--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             tr.appendChild(th1);
             tr.appendChild(th2);
             table.appendChild(tr);
-            for (var i = 0; i < ex_js_list.length; i++) {
+            // sistemare la lunghezza delle liste del ciclo for
+            for (var i = 0; i < ex_js_list.length; i++) { 
                 var tr = document.createElement("tr");
                 var td1 = document.createElement("td");
                 var td2 = document.createElement("td");
